--- a/css/chats.css
+++ b/css/chats.css
@@ -44,3 +44,19 @@
   font-size: 10px;
   color: #b4b4b4;
 }
+
+.chat-btn {
+  width: 50px;
+  height: 50px;
+  background-color: #ffe94a;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  position: fixed;
+  right: 15px;
+  bottom: 55px;
+  font-size: 24px;
+  color: #523737;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.2);
+}
